--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* Global CSS */
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(#111d8d, white);
+  z-index: -1; 
+}
+
 html,
 body {
   height: 100%;
