added html/js/css adjustments to add sweetalert2 for alert messaging. Also amended the Readme to take this addition into account

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ button:active {
 }
 
 .stat-item-focus {
-  outline: 2px solid #00f; /* Adjust the color and style as needed */
+  outline: 2px solid #00f; 
 }
 
 .header {
@@ -167,6 +167,67 @@ button:active {
   color: black;
   border: none;
   cursor: pointer;
+}
+
+/* Custom SweetAlert2 styles */
+
+/* Override SweetAlert2 modal background color */
+.swal2-popup {
+  background-color: rgba(255, 255, 255, 0.9) !important; 
+  border: 2px solid #000 !important;  
+  border-radius: 10px !important;     
+  font-family: 'Montserrat', sans-serif !important;
+  max-width: 90% !important;
+}
+
+/* Override SweetAlert2 title styles */
+.swal2-title {
+  color: black !important;     
+  font-family: 'Montserrat', sans-serif !important; 
+  font-size: 1.5em !important; 
+  text-align: center !important;
+  font-weight: bold !important;
+}
+
+/* Override SweetAlert2 content text styles */
+.swal2-content {
+  color: black !important;     
+  font-family: 'Montserrat', sans-serif !important; 
+  font-size: 0.75em !important;  
+  text-align: center !important;
+}
+
+/* Override SweetAlert2 button styles */
+.swal2-styled.swal2-confirm {
+  background-color: rgba(0, 86, 179, 0.8) !important; 
+  color: black !important;              
+  border: 2px solid black !important;    
+  border-radius: 16px !important;       
+  padding: 5px 10px !important;          
+  font-size: 1em !important;             
+  text-align: center !important;
+  text-decoration: none !important;
+  display: inline-block !important;
+  margin: 4px 2px !important;
+  cursor: pointer !important;
+} 
+
+/* Override SweetAlert2 button hover and active states */
+.swal2-styled.swal2-confirm:hover {
+  background-color: rgba(0, 123, 255, 0.8) !important; 
+}
+
+.swal2-styled.swal2-confirm:active {
+  background-color: rgba(255, 255, 255, 0.8) !important; 
+}
+
+/* Override SweetAlert2 icon styles */
+.swal2-icon {
+  border-color: #007bff !important; 
+}
+
+.swal2-icon.swal2-error .swal2-x-mark-line {
+  background-color: #dc3545 !important; /* Custom error icon color */
 }
 
 /* 404 Page */
