--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ button:active {
 }
 
 .swal2-icon.swal2-error .swal2-x-mark-line {
-  background-color: #dc3545 !important; /* Custom error icon color */
+  background-color: #dc3545 !important; 
 }
 
 /* 404 Page */
